<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">CMParts</string>
	<string name="device_settings_title">Device Settings</string>
	<string name="additional_settings_title">Additional Settings</string>

	<string name="trackball_settings_title">Trackball Settings</string>
	<string name="trackball_settings_summary">Trackball Wake and Unlock</string>
	
	<string name="brotips_title">Br0tip Settings</string>
	<string name="brotips_summary">Protips? More like Br0tips</string>

   <!-- User interface -->
   <string name="ui_title">User interface</string>
	<string name="ui_summary">User interface settings &amp; tweaks</string>

   <!-- User interface, orientation -->
   <string name="ui_rotation_title">Accelerometer rotation</string>
   <string name="pref_rotation_90_title">90 degrees</string>
   <string name="pref_rotation_180_title">180 degrees</string>
   <string name="pref_rotation_270_title">270 degrees</string>

   <!-- User interface, WebView -->
   <string name="ui_webview_title">WebView</string>
   <string name="pref_pinch_reflow_title">Reflow after pinch in</string>
   <string name="pref_pinch_reflow_summary">Reflow content immediately after pinch to zoom in</string>

	<!-- Trackball Wake -->
	<string name="pref_trackball_wake_title">Trackball Wake</string>
	<string name="pref_trackball_wake_summary">Pressing the trackball wakes the device.</string>

	<!-- Trackball Unlock -->
	<string name="pref_trackball_unlock_title">Trackball Unlock</string>
	<string name="pref_trackball_unlock_summary">Pressing the trackball unlocks the device.</string>

	<!-- br0tips -->
	<string name="pref_brotips_title">Enable Br0tips</string>
	<string name="pref_brotips_summary">Change the Home screen tips</string>

	<!-- Spare Parts -->
	<string name="spare_settings_title">Spare Parts</string>

	<!-- Launcher -->
	<string name="launcher_settings_title">ADWLauncher</string>
	
	<!-- Dev Tools -->
	<string name="dev_tools_title">Dev Tools</string>
</resources>
