<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/device_settings_title">

		<PreferenceScreen android:key="trackball_settings"
			android:title="@string/trackball_settings_title" android:summary="@string/trackball_settings_summary">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="com.cyanogenmod.cmparts"
				android:targetClass="com.cyanogenmod.cmparts.activities.TrackballActivity" />
		</PreferenceScreen>
		<PreferenceScreen android:key="brotips"
			android:title="@string/brotips_title" android:summary="@string/brotips_summary">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="com.cyanogenmod.cmparts"
				android:targetClass="com.cyanogenmod.cmparts.activities.BrotipsActivity" />
		</PreferenceScreen>
		<PreferenceScreen android:key="ui_settings"
			android:title="@string/ui_title" android:summary="@string/ui_summary">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="com.cyanogenmod.cmparts"
				android:targetClass="com.cyanogenmod.cmparts.activities.UIActivity" />
		</PreferenceScreen>
		
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/additional_settings_title">
		<!-- Launcher -->
		<PreferenceScreen android:key="com.android.launcher"
			android:title="@string/launcher_settings_title" android:enabled="false">
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="com.android.launcher"
				android:targetClass="com.android.launcher.MyLauncherSettings" />
		</PreferenceScreen>
		<!-- Spare Parts -->
		<PreferenceScreen android:key="com.android.spare_parts"
			android:title="@string/spare_settings_title" android:enabled="false">
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="com.android.spare_parts"
				android:targetClass="com.android.spare_parts.SpareParts" />
		</PreferenceScreen>
		<!-- Dev Tools -->
		<PreferenceScreen android:key="com.android.development"
			android:title="@string/dev_tools_title" android:enabled="false">
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="com.android.development"
				android:targetClass="com.android.development.Development" />
		</PreferenceScreen>

	</PreferenceCategory>
	
</PreferenceScreen>
